force-app/main/fat/objects/LoggerConfig__mdt/LoggerConfig__mdt.object-meta.xml
<CustomObject>
    <label>LoggerConfig</label>
    <pluralLabel>LoggerConfigs</pluralLabel>
</CustomObject>