force-app/main/fat/objects/LoggerConfig__mdt/fields/LoggerObject__c.field-meta.xml
<CustomField>
    <fullName>LoggerObject__c</fullName>
    <inlineHelpText>API Name of Custom Logger Object</inlineHelpText>
    <label>Logger Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>LoggerConfigs</relationshipLabel>
    <relationshipName>LoggerConfigs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>