force-app/main/fat/objects/LoggerConfig__mdt/fields/LoggerObjectLoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>LoggerObjectLoggingLevel__c</fullName>
    <inlineHelpText
  >API Name of Logging Level Field on Custom Logger Object</inlineHelpText>
    <label>Logger Object : Logging Level</label>
    <metadataRelationshipControllingField
  >LoggerConfig__mdt.LoggerObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>LoggerConfigs1</relationshipLabel>
    <relationshipName>LoggerConfigs1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>