force-app/main/fat/objects/LoggerConfig__mdt/fields/LoggerObjectLogMessage__c.field-meta.xml
<CustomField>
  <fullName>LoggerObjectLogMessage__c</fullName>
  <inlineHelpText>API Name of Log Message Field on Custom Logger Object</inlineHelpText>
  <label>Logger Object : Log Message</label>
  <metadataRelationshipControllingField>LoggerConfig__mdt.LoggerObject__c</metadataRelationshipControllingField>
  <referenceTo>FieldDefinition</referenceTo>
  <relationshipLabel>LoggerConfigs2</relationshipLabel>
  <relationshipName>LoggerConfigs2</relationshipName>
  <type>MetadataRelationship</type>
</CustomField>