force-app/main/fat/objects/LoggerConfig__mdt/fields/LoggerObjectName__c.field-meta.xml
<CustomField>
    <fullName>LoggerObjectName__c</fullName>
    <inlineHelpText
  >API Name of Name Field on Custom Logger Object</inlineHelpText>
    <label>Logger Object : Name</label>
    <metadataRelationshipControllingField
  >LoggerConfig__mdt.LoggerObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>LoggerConfigs</relationshipLabel>
    <relationshipName>LoggerConfigs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>